--- a/pixi.toml
+++ b/pixi.toml
@@ -29,6 +29,7 @@ ipython = "*"
 ipykernel = "*"
 jupyterlab = "*"
 pip = "*"
+pytz = ">=2025.2,<2026"
 
 [pypi-dependencies]
 damply = ">=0.10.0, <0.11"
