--- a/pixi.toml
+++ b/pixi.toml
@@ -35,6 +35,14 @@ jupyter_client = ">=8.6.3,<9"
 
 [pypi-dependencies]
 damply = ">=0.10.0, <0.11"
+med-imagetools = "*"
+readii = "*"
+simpleitk = "*"
+scikit-image = "*"
+pydicom = "*"
+pyradiomics-bhklab = "*"
+imagetools = "*"
+imgtools = "*"
 
 [tasks]
 example_script = {cmd="python $SCRIPTS/run_feature_extraction.py"}
