--- a/pixi.toml
+++ b/pixi.toml
@@ -41,7 +41,8 @@ fslpy = ">=3.21.1,<4"
 hdf5 = "==1.14.4"
 h5py = ">=3.10.0"
 matplotlib = ">=3.9.0,<4"
-simpleitk = "==2.4.0"
+simpleitk = ">=2.4.1,<3"
+
 
 
 [pypi-dependencies]
@@ -60,7 +61,9 @@ pydicom = ">=2.3.1,<3"
 imageio = "==2.36.1"
 networkx = "==3.4.2"
 pyyaml = "==6.0.2"
-med-imagetools = ">2"
+#med-imagetools = ">2"
+med-imagetools = "==2.4.0" 
+damply = "*"
 
 
 [tasks]
