--- a/pixi.toml
+++ b/pixi.toml
@@ -43,7 +43,10 @@ h5py = ">=3.10.0"
 matplotlib = ">=3.9.0,<4"
 simpleitk = ">=2.4.1,<3"
 
-
+# add R dependencies
+r-base = ">=4.2,<5"
+r-rmarkdown = "*"
+r-knitr = "*"
 
 [pypi-dependencies]
 # problem: med-imagetools==1.10.1 depends on numpy>=1.26.4,<2  but another dependency is forcing numpy==2.2.6
