--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -8,5 +8,5 @@ COMBINED_DATA_NAME = config["DATA_SOURCE"] + "_" + config["DATASET_NAME"]
 include: "scripts/radiomics/mit/run_mit.smk"
 
 rule all:
-	input: mit_autopipeline_index=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config["DATASET_NAME"]}" / f"mit_{config["DATASET_NAME"]}_index.csv",
-        output_directory=directory(dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config["DATASET_NAME"]}")
+	input: mit_autopipeline_index=dmpdirs.PROCDATA / COMBINED_DATA_NAME / f"mit_{config["DATASET_NAME"]}" / f"mit_{config["DATASET_NAME"]}_index.csv",
+        output_directory=directory(dmpdirs.PROCDATA / COMBINED_DATA_NAME /f"mit_{config["DATASET_NAME"]}")
