--- a/config/datasets/ISPY2.yaml
+++ b/config/datasets/ISPY2.yaml
@@ -13,8 +13,7 @@ CLINICAL:
 
 ### MED-IMAGETOOLS settings
 MIT:
-    ROI_MATCH_MAP:
-      Tumor:VOLSER_Analysis_Mask 
+    ROI_MATCH_MAP: "GTV:VOLSER.*"
     ROI_STRATEGY: MERGE
     MODALITIES: 
       image: MR
@@ -24,13 +23,16 @@ MIT:
 READII:
     IMAGE_TYPES:
         regions:
-            - "full"
         permutations:
-            - "shuffled"
         crop:
     TRAIN_TEST_SPLIT:
         split: False
         split_variable: {}
         impute: null
+
+### Feature Extraction settings
+EXTRACTION:
+    METHOD: pyradiomics
+    CONFIG: pyradiomics_original_single_feature.yaml
 
 RANDOM_SEED: 10
