--- a/pixi.toml
+++ b/pixi.toml
@@ -23,51 +23,20 @@ env.RESULTS = "${PIXI_PROJECT_ROOT}/data/results"
 env.SCRIPTS = "${PIXI_PROJECT_ROOT}/workflow/scripts"
 
 [dependencies]
-python = "3.10.*"
-ipython = "*"
+python = "==3.12"
+ipython = ">=9.3.0,<10"
 ipykernel = ">=6.29.5,<7"
-jupyterlab = ">=4.4.2,<5"
-pip = "*"
-pytz = ">=2025.2,<2026"
-jupyter = ">=1.1.1,<2"
-jupyter_client = ">=8.6.3,<9"
-pandas = "*"
-dcm2niix = ">=1.0.20241211,<2"
-boost-cpp = "==1.78.0"
-libblas = ">=3.9.0,<4.0a0"
-liblapack = ">=3.9.0,<4"
-zlib = ">=1.3.1,<2"
-fslpy = ">=3.21.1,<4"
-hdf5 = "==1.14.4"
-h5py = ">=3.10.0"
-matplotlib = ">=3.9.0,<4"
-simpleitk = ">=2.4.1,<3"
-
-# add R dependencies
-r-base = ">=4.2,<5"
-r-rmarkdown = "*"
-r-knitr = "*"
+jupyterlab = ">=4.4.3,<5"
+pip = ">=25.1.1,<26"
+r-base = ">=4.4.2,<4.5"
+r-rmarkdown = ">=2.29,<3"
+r-knitr = ">=1.50,<2"
+snakemake = ">=9.6.0,<10"
 
 [pypi-dependencies]
-# problem: med-imagetools==1.10.1 depends on numpy>=1.26.4,<2  but another dependency is forcing numpy==2.2.6
-#med-imagetools = "==1.10.1" or "*" not working
-#pandas = "==2.2.3"
-
-readii = ">=1.36.2,<2"
-scikit-image = "==0.24.0"
-pyradiomics-bhklab = "==3.1.4"
-sqlalchemy = "==2.0.36"
-sqlitedict = "==2.1.0"
-rich = "==13.9.4"
-tqdm = "==4.67.1"
-pydicom = ">=2.3.1,<3"
-imageio = "==2.36.1"
-networkx = "==3.4.2"
-pyyaml = "==6.0.2"
-#med-imagetools = ">2"
-med-imagetools = "==2.4.0" 
-damply = "*"
-
+med-imagetools = ">=2.10.0, <3"
+readii = ">=1.36.2, <2"
+damply = ">=0.17.0, <0.18"
 
 [tasks]
 example_script = { cmd = "python $SCRIPTS/run_feature_extraction.py" }
@@ -111,3 +80,5 @@ cmd = "mkdocs serve -f mkdocs.yaml"
 depends-on = ["doc-build"]
 inputs = ["docs"]
 description = "Serve documentation with mkdocs, runs doc-build first"
+
+
