--- a/pixi.toml
+++ b/pixi.toml
@@ -23,7 +23,7 @@ env.RESULTS = "${PIXI_PROJECT_ROOT}/data/results"
 env.SCRIPTS = "${PIXI_PROJECT_ROOT}/workflow/scripts"
 
 [dependencies]
-python = "3.10.*"
+python = "3.12.*"
 ipython = "*"
 ipykernel = ">=6.29.5,<7"
 jupyterlab = ">=4.4.2,<5"
@@ -49,10 +49,6 @@ r-rmarkdown = "*"
 r-knitr = "*"
 
 [pypi-dependencies]
-# problem: med-imagetools==1.10.1 depends on numpy>=1.26.4,<2  but another dependency is forcing numpy==2.2.6
-#med-imagetools = "==1.10.1" or "*" not working
-#pandas = "==2.2.3"
-
 readii = ">=1.36.2,<2"
 scikit-image = "==0.24.0"
 pyradiomics-bhklab = "==3.1.4"
@@ -64,8 +60,7 @@ pydicom = ">=2.3.1,<3"
 imageio = "==2.36.1"
 networkx = "==3.4.2"
 pyyaml = "==6.0.2"
-#med-imagetools = ">2"
-med-imagetools = "==2.4.0" 
+med-imagetools = "*"
 damply = "*"
 
 
