--- a/pixi.toml
+++ b/pixi.toml
@@ -7,7 +7,9 @@ authors = [
 description = "Running READII-2-ROQC on ISPY2"
 license = "MIT"
 channels = ["conda-forge", "bioconda"]
-platforms = ["osx-arm64", "linux-64", "win-64", "osx-64"]
+#platforms = ["osx-arm64", "linux-64", "win-64", "osx-64"]
+
+platforms = ["linux-64"] #TODO: debug for windows 
 
 [environments]
 quality = { features = ["quality"], solve-group = "default" }
@@ -36,9 +38,9 @@ snakemake = ">=9.6.0,<10"
 [pypi-dependencies]
 readii = ">=1.36.2,<2"
 scikit-image = "==0.24.0"
-pyradiomics-bhklab = "==3.1.4"
+pyradiomics-bhklab = "*" 
 sqlalchemy = "==2.0.36"
-sqlitedict = "==2.1.0"
+sqlitedict = "*" #"==2.1.0"
 tqdm = "==4.67.1"
 imageio = "==2.36.1"
 networkx = "==3.4.2"
